Update to Jetty 12 Split some xorcery.yaml files into xorcery-override.yaml where needed CalculatedConfigurationProvider can now return ObjectNode to continue drilling down into complex generated config